--- a/.github/workflows/sync_2_hf.yml
+++ b/.github/workflows/sync_2_hf.yml
@@ -14,6 +14,10 @@ jobs:
         with:
           fetch-depth: 0
           lfs: true
+      - name: Fetch remote changes
+        run: git fetch origin
+      - name: Merge changes
+        run: git merge origin/main --no-edit
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
