--- a/.github/workflows/sync_2_hf.yml
+++ b/.github/workflows/sync_2_hf.yml
@@ -18,6 +18,8 @@ jobs:
         run: git fetch origin
       - name: Merge changes
         run: git merge origin/main --no-edit
+      - name: Pull remote changes
+        run: git pull origin main
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
